package com.zergatstage.s05.model;

/**
 * Сущность
 */
public interface Entity {

    int getId();

}
